--- a/index.html
+++ b/index.html
@@ -668,52 +668,73 @@
 </div>
 <div id="relaxPage" class="page">
 
+    <!-- زرار رجوع -->
     <button class="back-btn" onclick="goHome()">⬅ رجوع</button>
 
-    <h2 style="text-align:center; margin-bottom:20px;">
-      أصوات الطبيعة وموجات الألفا
+    <h2 style="text-align:center; margin:20px 0;">
+        🌿 أصوات الطبيعة وموجات الألفا
     </h2>
-  
-    <!-- النوم -->
-    <div class="menu-item" style="background:#1e293b; color:white;">
-      💤 النوم
+
+    <!-- 💤 قسم النوم -->
+    <div class="menu-item" style="background: linear-gradient(135deg,#0f766e,#115e59); color:white;">
+        💤 النوم العميق
     </div>
-  
-    <div class="menu-item" onclick="playSound('https://files.catbox.moe/829mqe.mp3')">
-      ▶️ صوت 1
+
+    <div class="menu-item">
+        🌙 نوم 1
+        <br><br>
+        <button onclick="playSound('https://files.catbox.moe/829mqe.mp3')">▶ تشغيل</button>
+        <button onclick="stopSound()">⏹ إيقاف</button>
     </div>
-  
-    <div class="menu-item" onclick="playSound('https://files.catbox.moe/b1s5ka.mp3')">
-      ▶️ صوت 2
+
+    <div class="menu-item">
+        🌙 نوم 2
+        <br><br>
+        <button onclick="playSound('https://files.catbox.moe/b1s5ka.mp3')">▶ تشغيل</button>
+        <button onclick="stopSound()">⏹ إيقاف</button>
     </div>
-  
-    <!-- التركيز -->
-    <div class="menu-item" style="background:#1e293b; color:white;">
-      🎯 زيادة التركيز
+
+
+    <!-- 🎯 قسم التركيز -->
+    <div class="menu-item" style="background: linear-gradient(135deg,#1d4ed8,#1e40af); color:white;">
+        🎯 زيادة التركيز
     </div>
-  
-    <div class="menu-item" onclick="playSound('')">
-      ▶️ صوت 1
+
+    <div class="menu-item">
+        🧠 تركيز 1
+        <br><br>
+        <button onclick="playSound('https://files.catbox.moe/8bhyz6.mp3')">▶ تشغيل</button>
+        <button onclick="stopSound()">⏹ إيقاف</button>
     </div>
-  
-    <div class="menu-item" onclick="playSound('')">
-      ▶️ صوت 2
+
+    <div class="menu-item">
+        🧠 تركيز 2
+        <br><br>
+        <button onclick="playSound('https://files.catbox.moe/dspapk.mp3')">▶ تشغيل</button>
+        <button onclick="stopSound()">⏹ إيقاف</button>
     </div>
-  
-    <!-- التوتر -->
-    <div class="menu-item" style="background:#1e293b; color:white;">
-      😌 تقليل التوتر
+
+
+    <!-- 😌 قسم الاسترخاء -->
+    <div class="menu-item" style="background: linear-gradient(135deg,#9333ea,#7e22ce); color:white;">
+        😌 تقليل التوتر
     </div>
-  
-    <div class="menu-item" onclick="playSound('')">
-      ▶️ صوت 1
+
+    <div class="menu-item">
+        🌊 ريلاكس 1
+        <br><br>
+        <button onclick="playSound('https://files.catbox.moe/dzyg5f.mp3')">▶ تشغيل</button>
+        <button onclick="stopSound()">⏹ إيقاف</button>
     </div>
-  
-    <div class="menu-item" onclick="playSound('')">
-      ▶️ صوت 2
+
+    <div class="menu-item">
+        🌊 ريلاكس 2
+        <br><br>
+        <button onclick="playSound('https://files.catbox.moe/o23sov.mp3')">▶ تشغيل</button>
+        <button onclick="stopSound()">⏹ إيقاف</button>
     </div>
-  
-  </div>
+
+</div>
 </div>
 
 <script>
@@ -3212,8 +3233,25 @@ if (currentAudio) {
 // رجوع بالطريقة الأصلية بتاعتك
 showPage('homePage');
 }
+let currentAudio = null;
 
+function playSound(src) {
+  if (currentAudio) {
+    currentAudio.pause();
+    currentAudio.currentTime = 0;
+  }
+  currentAudio = new Audio(src);
+  currentAudio.play();
+}
+
+function stopSound() {
+  if (currentAudio) {
+    currentAudio.pause();
+    currentAudio.currentTime = 0;
+  }
+        }
 </script>
 
 </body>
 </html>
+
