--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
     transform: scale(1.05);
 }
     </style>
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#16a34a"> 
 </head>
 <body>
 
@@ -3140,8 +3142,12 @@ function startReligionQuiz() {
     // الفتح بنظام التطبيق (عشان الزرار يشتغل)
     showPage('islamicQuizPage');
 }
+    if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('sw.js');
+}
 </script>
 
 </body>
 </html>
+
 
